--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
    
 
     <!-- Start skills section -->
-    <section class="bg-dark skill-section">
+    <section class="bg-dark skill-section py-5">
       <h1 class="text-white text-center py-5">My Skills</h1>
       <div class="container">
        <div class="row">
